syntax = "proto3";

package NAlice.NRpc;

option go_package = "a.yandex-team.ru/alice/megamind/protos/grpc_request";
option java_package = "ru.yandex.alice.megamind.protos.grpc_request";
option java_outer_classname = "RpcAnalyticsInfoProto";

import "alice/megamind/protos/scenarios/analytics_info.proto";

import "mapreduce/yt/interface/protos/extension.proto";

message TRpcAnalyticsInfo {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    // Data for analytics system that monitors Alice and deployed scenarios.
    // For details, see https://a.yandex-team.ru/arc/trunk/arcadia/alice/megamind/protos/scenarios/analytics_info.proto
    NAlice.NScenarios.TAnalyticsInfo AnalyticsInfo = 1 [json_name = "analytics_info", (NYT.column_name) = "analytics_info"];
}
